RESOLVED FIXED116384
Garbage on page background while http://canberraballoons.com.au is loading
https://bugs.webkit.org/show_bug.cgi?id=116384
Summary Garbage on page background while http://canberraballoons.com.au is loading
Simon Fraser (smfr)
Reported 2013-05-17 22:01:19 PDT
Garbage on page background while http://canberraballoons.com.au is loading
Attachments
Patch (2.23 KB, patch)
2013-05-17 22:04 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2013-05-17 22:04:20 PDT
Simon Fraser (smfr)
Comment 2 2013-05-17 22:04:43 PDT
Simon Fraser (smfr)
Comment 3 2013-05-18 12:08:57 PDT
Note You need to log in before you can comment on or make changes to this bug.